--- a/src/index.html
+++ b/src/index.html
@@ -15,21 +15,99 @@
   <meta name="msapplication-TileImage" content="img/fav-icon.png">
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="format-detection" content="telephone=no">
+  <link rel="stylesheet" href="css/styles.min.css">
 
   <title>Module-11</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" 
-      type="image/png" 
-      href="img/fav-icon.png">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" type="image/png" href="img/fav-icon.png">
 </head>
 
 <body>
-  <main>
-    <div class="wrapper">
-
+  <div class="footer">
+    <div class="wrapper block">
+      <div class="footer__block1">
+        <h2 class="footer__title">
+          Sk wear online
+        </h2>
+        <div class="footer__info-production swimsuit">
+          Производство купальников
+        </div>
+        <div class="footer__info-production fitness">
+          и одежды для фитнеса
+        </div>
+        <div class="footer__info-contact">
+          ИП Хлебникова Ирина Александровна
+        </div>
+        <div class="footer__info-contact">г.Сочи</div>
+        <div class="footer__info-contact">
+          E: sushka_kuper@mail.ru
+        </div>
+        <div class="footer__info-contact">
+          Т: 8988-167-15-09
+        </div>
+      </div>
+      <div class="footer__block2">
+        <h3 class="footer__subtitle-about">
+          О нас
+        </h3>
+        <ul class="footer__about-list">
+          <li class="footer__about-item">
+            <a href="#" class="footer__about-link">
+              Каталог
+            </a>
+          </li>
+          <li class="footer__about-item">
+            <a href="#" class="footer__about-link">
+              Акции
+            </a>
+          </li>
+          <li class="footer__about-item">
+            <a href="#" class="footer__about-link">
+              отзывы
+            </a>
+          </li>
+          <li class="footer__about-item">
+            <a href="#" class="footer__about-link">
+              О проекте
+            </a>
+          </li>
+          <li class="footer__about-item">
+            <a href="#" class="footer__about-link">
+              Контакты
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__block3">
+        <h3 class="footer__questions-subtitle">Частые вопросы</h3>
+        <ul class="footer__questions-list">
+          <li class="footer__questions-item">
+            <a href="#" class="footer__questions-link">Оплата и доставка</a>
+          </li>
+          <li class="footer__questions-item">
+            <a href="#" class="footer__questions-link">Гарантия</a>
+          </li>
+          <li class="footer__questions-item">
+            <a href="#" class="footer__questions-link">Качество</a>
+          </li>
+          <li class="footer__questions-item">
+            <a href="#" class="footer__questions-link">Условия возврата</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__block4">
+        <h3 class="footer__join-subtitle">Присоеденяйтесь</h3>
+        <button class="footer__join-button"></button>
+        <button class="footer__join-button"></button>
+      </div>
+      <div class="footer__block5">
+        <h3 class="footer__news-subtitle">Рассылка новостей</h3>
+        <div class="footer__news-sale">Будьте в курсе о наших акциях,</div>
+        <div class="footer__news-sale">скидках и других новостях</div>
+        <button class="footer__news-button">Подписаться</button>
+      </div>
     </div>
-  </main>
+  </div>
   <script src="js/scripts.min.js"></script>
 </body>
 
