--- a/src/index.html
+++ b/src/index.html
@@ -24,375 +24,9 @@
 </head>
 
 <body>
-  <div class="footer">
-    <div class="wrapper block">
-      <div class="footer__block1">
-        <h2 class="footer__title">
-          Sk wear online
-        </h2>
-        <div class="footer__info-production swimsuit">
-          Производство купальников
-        </div>
-        <div class="footer__info-production fitness">
-          и одежды для фитнеса
-        </div>
-        <div class="footer__info-contact">
-          ИП Хлебникова Ирина Александровна
-        </div>
-        <div class="footer__info-contact">г.Сочи</div>
-        <div class="footer__info-contact">
-          E: sushka_kuper@mail.ru
-        </div>
-        <div class="footer__info-contact">
-          Т: 8988-167-15-09
-        </div>
-      </div>
-      <div class="footer__block2">
-        <h3 class="footer__subtitle-about">
-          О нас
-        </h3>
-        <ul class="footer__about-list">
-          <li class="footer__about-item">
-            <a href="#" class="footer__about-link">
-              Каталог
-            </a>
-          </li>
-          <li class="footer__about-item">
-            <a href="#" class="footer__about-link">
-              Акции
-            </a>
-          </li>
-          <li class="footer__about-item">
-            <a href="#" class="footer__about-link">
-              отзывы
-            </a>
-          </li>
-          <li class="footer__about-item">
-            <a href="#" class="footer__about-link">
-              О проекте
-            </a>
-          </li>
-          <li class="footer__about-item">
-            <a href="#" class="footer__about-link">
-              Контакты
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer__block3">
-        <h3 class="footer__questions-subtitle">Частые вопросы</h3>
-        <ul class="footer__questions-list">
-          <li class="footer__questions-item">
-            <a href="#" class="footer__questions-link">Оплата и доставка</a>
-          </li>
-          <li class="footer__questions-item">
-            <a href="#" class="footer__questions-link">Гарантия</a>
-          </li>
-          <li class="footer__questions-item">
-            <a href="#" class="footer__questions-link">Качество</a>
-          </li>
-          <li class="footer__questions-item">
-            <a href="#" class="footer__questions-link">Условия возврата</a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer__block4">
-        <h3 class="footer__join-subtitle">Присоеденяйтесь</h3>
-        <button class="footer__join-button"></button>
-        <button class="footer__join-button"></button>
-      </div>
-      <div class="footer__block5">
-        <h3 class="footer__news-subtitle">Рассылка новостей</h3>
-        <div class="footer__news-sale">Будьте в курсе о наших акциях,</div>
-        <div class="footer__news-sale">скидках и других новостях</div>
-        <button class="footer__news-button">Подписаться</button>
-
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body>
-  <main class= "main">
-    <div class="wrapper flex">
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 1.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 2.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 3.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 4.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 5.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 6.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 7.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 8.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 9.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 10.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 11.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <div class="content-box__sale">Акция</div>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-      </div>
-      <div class="content-box">
-        <div class="content-box__img-holder">
-          <img src="img/photo 12.png" class="content-box__img" alt="photo-1">
-          <div class="content-box__learn-more">
-            <svg class="content-box__btn-search btn">
-              <use href="img/sprite/sprite.svg#icon-search"></use>
-            </svg>
-            <a href="" class="content-box__learn-txt">Узнать больше</a>
-            <svg class="content-box__btn-heart btn">
-              <use href="img/sprite/sprite.svg#icon-heart"></use>
-            </svg>
-          </div>
-          <a class="content-box__sale">Акция</a>
-        </div>
-        <div class="content-box__collection">Купальник 2018</div>
-        <div class="content-box__collection-name">
-          <span>Купальник</span>
-          <span>Полоска</span>
-        </div>
-        <div class="content-box__collection-price">
-          <span class="content-box__collection-price__throught">850</span>
-          <span class="content-box__collection-price__red">450</span></div>
-
-      </div>
-    </div>
-  </div>
-  <script src="js/scripts.min.js"></script>
+    //= header.html
+    //= main.html
+    //= footer.html
 </body>
 
 </html>
