--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <div class="footer">
+  <footer class="footer">
     <div class="wrapper block">
       <div class="footer__block1">
         <h2 class="footer__title">
@@ -97,17 +97,16 @@
       </div>
       <div class="footer__block4">
         <h3 class="footer__join-subtitle">Присоеденяйтесь</h3>
-        <button class="footer__join-button"></button>
-        <button class="footer__join-button"></button>
+        <svg class="footer__join-link"><use href="img/sprite/sprite.svg.svg#icon-instagram"></use></svg>
       </div>
       <div class="footer__block5">
         <h3 class="footer__news-subtitle">Рассылка новостей</h3>
         <div class="footer__news-sale">Будьте в курсе о наших акциях,</div>
         <div class="footer__news-sale">скидках и других новостях</div>
-        <button class="footer__news-button">Подписаться</button>
+        <button class="footer__news-button"><a href="#" class="footer__news-btn">Подписаться</a></button>
       </div>
     </div>
-  </div>
+  </footer>
   <script src="js/scripts.min.js"></script>
 </body>
 
