--- a/src/header.html
+++ b/src/header.html
@@ -7,10 +7,18 @@
         </div>
         <ul class="list menu">
           <li class="link menu__item menu__item--active">
-            <a href="#" class="link menu__link menu__link--decor">Каталог</a>
+            <select class="menu__select">
+              <option value="1">Каталог</option>
+              <option value="2">Пункт 2</option>
+              <option value="3">Пункт 3</option>
+            </select>
           </li>
           <li class="link menu__item menu__item--active">
-            <a href="#" class="link menu__link menu__link--decor">Акции</a>
+            <select class="menu__select">
+              <option value="1">Акции</option>
+              <option value="2">Пункт 2</option>
+              <option value="3">Пункт 3</option>
+            </select>
           </li>
           <li class="link menu__item menu__item--active">
             <a href="#" class="link menu__link">Отзывы</a>
@@ -24,12 +32,8 @@
         </ul>
       </div>
       <div class="au-form">
-        <div class="au-form__login-WRP">
-          <a href="#" class="link au-form__login au-form__login--decor">Вход</a>
-        </div>
-        <div class="au-form__reg-WRP">
-          <a href="#" class="link au-form__reg">Регистрация</a>
-        </div>
+        <button class="btn au-form__btn-login">Вход</button>
+        <button class="btn au-form__btn-reg">Регистрация</button>
         <button class="btn au-form__btn-like au-form__btn-like--active">
           <span class="au-form__notification">0</span>
           <svg class="au-form__icon-heart ">
