--- a/src/main.html
+++ b/src/main.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Document</title>
+</head>
 
 <body>
     <main class="main">
@@ -6,17 +16,13 @@
                 <div class="content-box__img-holder">
                     <img src="img/photo 1.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
-                        <button class = "content-box__float-btn">
-                                <svg class="content-box__btn-search btn">
-                                        <use href="img/sprite/sprite.svg#icon-search"></use>
-                                </svg>
-                        </button>
+                        <svg class="content-box__btn-search btn">
+                            <use href="img/sprite/sprite.svg#icon-search"></use>
+                        </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <button class = "content-box__float-btn">
-                            <svg class="content-box__btn-heart btn">
-                                    <use href="img/sprite/sprite.svg#icon-heart"></use>
-                            </svg>
-                        </button>
+                        <svg class="content-box__btn-heart btn">
+                            <use href="img/sprite/sprite.svg#icon-heart"></use>
+                        </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
@@ -254,12 +260,12 @@
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
-               </div>
+                </div>
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-                </div>
-                <div class="content-box">
+            </div>
+            <div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 12.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -281,8 +287,9 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-                </div>
+            </div>
         </div>
     </div>
 </body>
 
+</html>
