--- a/src/header.html
+++ b/src/header.html
@@ -32,11 +32,11 @@
         </ul>
       </div>
       <div class="au-form">
-        <button class="btn au-form__btn-login">Вход</button>
-        <button class="btn au-form__btn-reg">Регистрация</button>
+        <button class="btn au-form__btn-login au-form__btn-login--active">Вход</button>
+        <button class="btn au-form__btn-reg au-form__btn-reg--active">Регистрация</button>
         <button class="btn au-form__btn-like au-form__btn-like--active">
           <span class="au-form__notification">0</span>
-          <svg class="au-form__icon-heart ">
+          <svg class="au-form__icon-like">
             <use href="img/sprite/sprite.svg#icon-heart ">
             </use>
           </svg>
