--- a/src/footer.html
+++ b/src/footer.html
@@ -72,14 +72,24 @@
     </div>
     <div class="footer__block4">
       <h3 class="footer__join-subtitle">Присоеденяйтесь</h3>
-      <a href="#" class="footer__join-svg">
+      <a href="https://www.instagram.com/" class="footer__join-svg" target="_blank">
         <svg class="footer__join-svg" width="30" height="30">
           <use href="img/sprite/sprite.svg#icon-instagram"></use>
         </svg>
       </a>
-      <a href="#" class="footer__join-svg">
+      <a href="https://www.facebook.com/" class="footer__join-svg" target="_blank">
         <svg class="footer__join-svg" width="30" height="30">
-          <use href="img/sprite/sprite.svg#icon-instagram"></use>
+          <use href="img/sprite/sprite.svg#icon-facebook2"></use>
+        </svg>
+      </a>
+      <a href="https://twitter.com" class="footer__join-svg" target="_blank">
+        <svg class="footer__join-svg" width="30" height="30">
+          <use href="img/sprite/sprite.svg#icon-twitter2"></use>
+        </svg>
+      </a>
+      <a href="https://www.linkedin.com" class="footer__join-svg" target="_blank">
+        <svg class="footer__join-svg" width="30" height="30">
+          <use href="img/sprite/sprite.svg#icon-linkedin2"></use>
         </svg>
       </a>
     </div>
