--- a/src/header.html
+++ b/src/header.html
@@ -45,28 +45,28 @@
           </svg>
         </button>
       </div>
-
-
     </div>
   </div>
   <div class="wrapper">
     <div class="header-bottom">
-      <select name="
-        sorting" class="header-bottom__select">
-        <option value="Сортировка">Сортировка</option>
-        <option value="">item#2</option>
-        <option value="">item#3</option>
-        <option value="">item#4</option>
-      </select>
-      <select name="
-        sorting" class="header-bottom__select">
-        <option value="Категории" class="header-bottom__select-option">Категории</option>
-        <option value="item2" class="header-bottom__select-option">item#2</option>
-        <option value="item3" class="header-bottom__select-option">item#3</option>
-        <option value="item3" class="header-bottom__select-option">item#4</option>
-      </select>
-      <input type="text" class="header-bottom__select" placeholder="ПОИСК">
+      <form action="#" class="header-bottom__form">
+        <select name="
+            sorting" class="header-bottom__select">
+          <option value="Сортировка">Сортировка</option>
+          <option value="">item#</option>
+          <option value="">item#3</option>
+          <option value="">item#4</option>
+        </select>
+        <select name="
+            sorting" class="header-bottom__select">
+          <option value="Категории" class="header-bottom__select-option">Категории</option>
+          <option value="item2" class="header-bottom__select-option">item#2</option>
+          <option value="item3" class="header-bottom__select-option">item#3</option>
+          <option value="item3" class="header-bottom__select-option">item#4</option>
+        </select>
+        <input type="text" class="header-bottom__select" placeholder="ПОИСК">
     </div>
     <a href="" class="header-bottom__select-reset">Снять фильтры</a>
+    </form>
   </div>
 </header>
