--- a/src/header.html
+++ b/src/header.html
@@ -7,13 +7,13 @@
         </div>
         <ul class="list menu">
           <li class="link menu__item menu__item--active">
-            <a href="#" class="link menu__link menu__link--decor">Каталог</a>
+            <a href="index.html" class="link menu__link menu__link--decor">Каталог</a>
           </li>
           <li class="link menu__item menu__item--active">
             <a href="#" class="link menu__link menu__link--decor">Акции</a>
           </li>
           <li class="link menu__item menu__item--active">
-            <a href="#" class="link menu__link">Отзывы</a>
+            <a href="reviews.html" class="link menu__link">Отзывы</a>
           </li>
           <li class="link menu__item menu__item--active">
             <a href="#" class="link menu__link">О проекте </a>
