--- a/src/header.html
+++ b/src/header.html
@@ -1,36 +1,35 @@
 <header>
   <div class='header'>
     <div class="wrapper wrapper-header">
-      <div class="wrapper-logo-menu">
-        <div class="logo">
-          <a href="#" class="link link-logo">SK WEAR ONLINE</a>
-        </div>
-        <ul class="list menu">
-          <li class="link menu__item menu__item--active">
-            <select class="menu__select">
-              <option value="1">Каталог</option>
-              <option value="2">Пункт 2</option>
-              <option value="3">Пункт 3</option>
-            </select>
-          </li>
-          <li class="link menu__item menu__item--active">
-            <select class="menu__select">
-              <option value="1">Акции</option>
-              <option value="2">Пункт 2</option>
-              <option value="3">Пункт 3</option>
-            </select>
-          </li>
-          <li class="link menu__item menu__item--active">
-            <a href="#" class="link menu__link">Отзывы</a>
-          </li>
-          <li class="link menu__item menu__item--active">
-            <a href="#" class="link menu__link">О проекте </a>
-          </li>
-          <li class="link menu__item menu__item--active">
-            <a href="#" class="link menu__link">Контакты</a>
-          </li>
-        </ul>
+      <div class="logo">
+        <a href="#" class="link link-logo">SK WEAR ONLINE</a>
       </div>
+      <ul class="list menu">
+        <li class="link menu__item menu__item--active">
+          <select class="menu__select">
+            <option selected disabled hidden value="1">Каталог</option>
+            <option class="menu__select-option" value="2">Пункт 2</option>
+            <option class="menu__select-option" value="3">Пункт 3</option>
+          </select>
+        </li>
+        <li class="link menu__item menu__item--active">
+          <select class="menu__select">
+            <option selected disabled hidden value="1">Акции</option>
+            <option class="menu__select-option" value="2">Пункт 2</option>
+            <option class="menu__select-option" value="3">Пункт 3</option>
+          </select>
+        </li>
+        <li class="link menu__item menu__item--active">
+          <a href="#" class="link menu__link">Отзывы</a>
+        </li>
+        <li class="link menu__item menu__item--active">
+          <a href="#" class="link menu__link">О проекте </a>
+        </li>
+        <li class="link menu__item menu__item--active">
+          <a href="#" class="link menu__link">Контакты</a>
+        </li>
+      </ul>
+
       <div class="au-form">
         <button class="btn au-form__btn-login au-form__btn-login--active">Вход</button>
         <button class="btn au-form__btn-reg au-form__btn-reg--active">Регистрация</button>
