--- a/src/main.html
+++ b/src/main.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
-</head>
-
-<body>
     <main class="main">
         <div class="wrapper flex">
             <div class="content-box">
@@ -20,7 +9,7 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
@@ -290,6 +279,4 @@
             </div>
         </div>
     </div>
-</body>
-
-</html>
+</main>
