fixed btn-profile , add svg

--- a/src/header.html
+++ b/src/header.html
@@ -31,7 +31,13 @@
       </ul>
 
       <div class="au-form">
-        <button class="btn au-form__btn-login au-form__btn-login--active">Вход</button>
+        <button class="btn au-form__btn-login au-form__btn-login--active">
+          <svg class="au-form__icon-profile">
+            <use href="img/sprite/sprite.svg#icon-profile">
+            </use>
+          </svg>
+          <span>Вход</span>
+        </button>
         <button class="btn au-form__btn-reg au-form__btn-reg--active">Регистрация</button>
         <button class="btn au-form__btn-like au-form__btn-like--active">
           <span class="au-form__notification">0</span>
