--- a/src/footer.html
+++ b/src/footer.html
@@ -4,22 +4,22 @@
       <h2 class="footer__title">
         Sk wear online
       </h2>
-      <div class="footer__info-production swimsuit">
+      <p class="footer__info-production swimsuit">
         Производство купальников
-      </div>
-      <div class="footer__info-production fitness">
+      </p>
+      <p class="footer__info-production fitness">
         и одежды для фитнеса
-      </div>
-      <div class="footer__info-contact">
+      </p>
+      <p class="footer__info-contact">
         ИП Хлебникова Ирина Александровна
-      </div>
-      <div class="footer__info-contact">г.Сочи</div>
-      <div class="footer__info-contact">
+      </p>
+      <p class="footer__info-contact">г.Сочи</p>
+      <p class="footer__info-contact">
         E: sushka_kuper@mail.ru
-      </div>
-      <div class="footer__info-contact">
+      </p>
+      <p class="footer__info-contact">
         Т: 8988-167-15-09
-      </div>
+      </p>
     </div>
     <div class="footer__block2">
       <h3 class="footer__subtitle-about">
@@ -97,7 +97,10 @@
       <h3 class="footer__news-subtitle">Рассылка новостей</h3>
       <div class="footer__news-sale">Будьте в курсе о наших акциях,</div>
       <div class="footer__news-sale">скидках и других новостях</div>
-      <button class="footer__news-button">Подписаться</button>
+      <div class="footer__news-btn">
+        <button class="footer__news-button-plane"></button>
+        <button class="footer__news-button">Подписаться</button>
+      </div>
     </div>
   </div>
   <div class="block2">
