--- a/src/footer.html
+++ b/src/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="wrapper block">
-    <div class="footer__block1">
+    <div class="footer__block1 footer__modifier">
       <h2 class="footer__title">
         Sk wear online
       </h2>
@@ -21,7 +21,7 @@
         Т: 8988-167-15-09
       </p>
     </div>
-    <div class="footer__block2">
+    <div class="footer__block2 footer__modifier">
       <h3 class="footer__subtitle-about">
         О нас
       </h3>
@@ -53,7 +53,7 @@
         </li>
       </ul>
     </div>
-    <div class="footer__block3">
+    <div class="footer__block3 footer__modifier">
       <h3 class="footer__questions-subtitle">Частые вопросы</h3>
       <ul class="footer__questions-list">
         <li class="footer__questions-item">
@@ -70,7 +70,7 @@
         </li>
       </ul>
     </div>
-    <div class="footer__block4">
+    <div class="footer__block4 footer__modifier">
       <h3 class="footer__join-subtitle">Присоеденяйтесь</h3>
       <a href="https://www.instagram.com/" class="footer__join-svg" target="_blank">
         <svg class="footer__join-svg" width="30" height="30">
@@ -93,7 +93,7 @@
         </svg>
       </a>
     </div>
-    <div class="footer__block5">
+    <div class="footer__block5 footer__modifier">
       <h3 class="footer__news-subtitle">Рассылка новостей</h3>
       <div class="footer__news-sale">Будьте в курсе о наших акциях,</div>
       <div class="footer__news-sale">скидках и других новостях</div>
