--- a/src/header.html
+++ b/src/header.html
@@ -1,8 +1,53 @@
 <header>
+
+
+
+
+
+<!-- 
+      <div>
+        <div class="menu-cont" id="toggle">
+            <span class='menu-txt' data-text='CLOSE-'>
+              -MENU
+            </span>
+        </div>
+        <div class="overlay" id="overlay">
+          <nav class="overlay-menu">
+            <ul>
+              <li ><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Work</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+ -->
+
+
+
   <div class='header'>
     <div class="wrapper wrapper-header">
       <div class="logo">
         <a href="index.html" class="link link-logo">SK WEAR ONLINE</a>
+      </div>
+      
+      <div class>
+          <div class="menu-cont" id="toggle">
+              <span class='menu-txt' data-text='CLOSE-'>
+                -MENU
+              </span>
+          </div>
+          <div class="overlay" id="overlay">
+            <nav class="overlay-menu">
+              <ul>
+                <li ><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
       </div>
       <ul class="list menu">
         <li class="link menu__item menu__item--active">
