--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/styles.min.css">
-
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <title>Module-11</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/png" href="img/fav-icon.png">
@@ -27,6 +27,7 @@
     //= header.html
     //= main.html
     //= footer.html
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
