--- a/src/footer.html
+++ b/src/footer.html
@@ -95,8 +95,8 @@
     </div>
     <div class="footer__block5 footer__modifier">
       <h3 class="footer__news-subtitle">Рассылка новостей</h3>
-      <div class="footer__news-sale">Будьте в курсе о наших акциях,</div>
-      <div class="footer__news-sale">скидках и других новостях</div>
+      <div class="footer__news-sale"><p>Будьте в курсе о наших акциях,</p></div>
+      <div class="footer__news-sale"><p>скидках и других новостях</p></div>
       <div class="footer__news-btn">
         <button class="footer__news-button-plane"></button>
         <button class="footer__news-button">Подписаться</button>
