--- a/src/footer.html
+++ b/src/footer.html
@@ -1,109 +1,83 @@
 <footer class="footer">
-  <div class="wrapper block">
-    <div class="footer__block1 footer__modifier">
-      <h2 class="footer__title">
-        Sk wear online
-      </h2>
-      <p class="footer__info-production swimsuit">
-        Производство купальников
-      </p>
-      <p class="footer__info-production fitness">
-        и одежды для фитнеса
-      </p>
-      <p class="footer__info-contact">
-        ИП Хлебникова Ирина Александровна
-      </p>
-      <p class="footer__info-contact">г.Сочи</p>
-      <p class="footer__info-contact">
-        E: sushka_kuper@mail.ru
-      </p>
-      <p class="footer__info-contact">
-        Т: 8988-167-15-09
-      </p>
-    </div>
-    <div class="footer__block2 footer__modifier">
-      <h3 class="footer__subtitle-about">
-        О нас
-      </h3>
-      <ul class="footer__about-list">
-        <li class="footer__about-item">
-          <a href="#" class="footer__about-link">
-            Каталог
-          </a>
-        </li>
-        <li class="footer__about-item">
-          <a href="#" class="footer__about-link">
-            Акции
-          </a>
-        </li>
-        <li class="footer__about-item">
-          <a href="#" class="footer__about-link">
-            отзывы
-          </a>
-        </li>
-        <li class="footer__about-item">
-          <a href="#" class="footer__about-link">
-            О проекте
-          </a>
-        </li>
-        <li class="footer__about-item">
-          <a href="#" class="footer__about-link">
-            Контакты
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="footer__block3 footer__modifier">
-      <h3 class="footer__questions-subtitle">Частые вопросы</h3>
-      <ul class="footer__questions-list">
-        <li class="footer__questions-item">
-          <a href="#" class="footer__questions-link">Оплата и доставка</a>
-        </li>
-        <li class="footer__questions-item">
-          <a href="#" class="footer__questions-link">Гарантия</a>
-        </li>
-        <li class="footer__questions-item">
-          <a href="#" class="footer__questions-link">Качество</a>
-        </li>
-        <li class="footer__questions-item">
-          <a href="#" class="footer__questions-link">Условия возврата</a>
-        </li>
-      </ul>
-    </div>
-    <div class="footer__block4 footer__modifier">
-      <h3 class="footer__join-subtitle">Присоеденяйтесь</h3>
-      <a href="https://www.instagram.com/" class="footer__join-svg" target="_blank">
-        <svg class="footer__join-svg" width="30" height="30">
-          <use href="img/sprite/sprite.svg#icon-instagram"></use>
-        </svg>
+  <div class="wrapper footer__flex">
+    <ul class="footer__box">
+      <li class="footer__box--item"><a class="footer__box--logo">Sk Wear Online</a></li>
+      <li class="footer__box--item">
+        <p class="footer__box--discr">Производство купальников и одежды для фитнеса</p>
+      </li>
+      <li class="footer__box--item">
+        <p class="footer__box--discr">ИП Хлебникова Ирина Александровна</p>
+      </li>
+      <li class="footer__box--item">
+        <p class="footer__box--discr">г.Сочи</p>
+      </li>
+      <li class="footer__box--item">
+        <p class="footer__box--discr">E. sushka_kuper@mail.ru</p>
+      </li>
+      <li class="footer__box--item">
+        <p class="footer__box--discr">T: 8988-167-15-09</p>
+      </li>
+    </ul>
+    <ul class="footer__box">
+      <li class="footer__box--item">
+        <h3 class="footer__box--head">О НАС</h3>
+      </li>
+      <li class="footer__box--item"><a class="footer__box--link">Каталог</a></li>
+      <li class="footer__box--item"><a class="footer__box--link">Акции</a></li>
+      <li class="footer__box--item"><a class="footer__box--link">Отзывы</a></li>
+      <li class="footer__box--item"><a class="footer__box--link">О проекте</a></li>
+      <li class="footer__box--item"><a class="footer__box--link">Контакты</a></li>
+    </ul>
+    <ul class="footer__box">
+      <li class="footer__box--item">
+        <h3 class="footer__box--head">Частые вопросы</h3>
+      </li>
+      <li class="footer__box--item"><a class="footer__box--link">Оплата и доставка<a></li>
+      <li class="footer__box--item"><a class="footer__box--link">Гарантия<a></li>
+      <li class="footer__box--item"><a class="footer__box--link">Качество<a></li>
+      <li class="footer__box--item"><a class="footer__box--link">Условия возврата<a></li>
+    </ul>
+    <ul class="footer__box">
+      <li class="footer__box--item">
+            <h3 class="footer__box--head">Присоединяйтесь</h3>
+      </li>
+      <a href="#">
+          <svg width="28" height="28" class="footer__box--svg">
+              <use href="img/sprite/sprite.svg#icon-instagram"></use>
+            </svg>
       </a>
-      <a href="https://www.facebook.com/" class="footer__join-svg" target="_blank">
-        <svg class="footer__join-svg" width="30" height="30">
-          <use href="img/sprite/sprite.svg#icon-facebook2"></use>
-        </svg>
+      <a href="#">
+          <svg width="28" height="28" class="footer__box--svg">
+              <use href="img/sprite/sprite.svg#icon-linkedin2"></use>
+            </svg>
+      </a><a href="#">
+          <svg width="28" height="28" class="footer__box--svg">
+              <use href="img/sprite/sprite.svg#icon-facebook2"></use>
+            </svg>
+      </a><a href="#">
+          <svg width="28" height="28" class="footer__box--svg">
+              <use href="img/sprite/sprite.svg#icon-twitter2"></use>
+          </svg>
       </a>
-      <a href="https://twitter.com" class="footer__join-svg" target="_blank">
-        <svg class="footer__join-svg" width="30" height="30">
-          <use href="img/sprite/sprite.svg#icon-twitter2"></use>
-        </svg>
-      </a>
-      <a href="https://www.linkedin.com" class="footer__join-svg" target="_blank">
-        <svg class="footer__join-svg" width="30" height="30">
-          <use href="img/sprite/sprite.svg#icon-linkedin2"></use>
-        </svg>
-      </a>
-    </div>
-    <div class="footer__block5 footer__modifier">
-      <h3 class="footer__news-subtitle">Рассылка новостей</h3>
-      <div class="footer__news-sale"><p>Будьте в курсе о наших акциях,</p></div>
-      <div class="footer__news-sale"><p>скидках и других новостях</p></div>
-      <div class="footer__news-btn">
-        <button class="footer__news-button-plane"></button>
-        <button class="footer__news-button">Подписаться</button>
-      </div>
-    </div>
+    </ul>
+    <ul class="footer__box">
+      <li class="footer__box--item">
+        <h3 class="footer__box--head">Рассылка новостей</h3>
+      </li>
+      <li class="footer__box--item">
+        <p class="footer__box--discr">Будьте в курсе о наших акциях, скидках и других новостях</p>
+      </li>
+      <li class="footer__box--item foo__btn">
+        <button class="footer__box--btn plane">
+          <svg width="41" height="44">
+            <use href="img/sprite/sprite.svg#icon-compass"></use>
+          </svg>
+        </button>
+        <button class="footer__box--btn join">Подписаться</button>
+      </li>
+    </ul>
   </div>
-  <div class="block2">
-    <p class="block2__rights wrapper">&copy 2018 Все права защищены skwear.com</p>
+  <div class="footer__bottom">
+    <p class="footer__bottom--copyright">&#169; 2018 Все права защищены skwear.com</p>
   </div>
 </footer>
