--- a/src/footer.html
+++ b/src/footer.html
@@ -1,83 +1,84 @@
 <footer class="footer">
   <div class="wrapper footer__flex">
-    <ul class="footer__box">
-      <li class="footer__box--item"><a class="footer__box--logo">Sk Wear Online</a></li>
-      <li class="footer__box--item">
-        <p class="footer__box--discr">Производство купальников и одежды для фитнеса</p>
-      </li>
-      <li class="footer__box--item">
-        <p class="footer__box--discr">ИП Хлебникова Ирина Александровна</p>
-      </li>
-      <li class="footer__box--item">
-        <p class="footer__box--discr">г.Сочи</p>
-      </li>
-      <li class="footer__box--item">
-        <p class="footer__box--discr">E. sushka_kuper@mail.ru</p>
-      </li>
-      <li class="footer__box--item">
-        <p class="footer__box--discr">T: 8988-167-15-09</p>
-      </li>
-    </ul>
-    <ul class="footer__box">
-      <li class="footer__box--item">
-        <h3 class="footer__box--head">О НАС</h3>
-      </li>
-      <li class="footer__box--item"><a class="footer__box--link">Каталог</a></li>
-      <li class="footer__box--item"><a class="footer__box--link">Акции</a></li>
-      <li class="footer__box--item"><a class="footer__box--link">Отзывы</a></li>
-      <li class="footer__box--item"><a class="footer__box--link">О проекте</a></li>
-      <li class="footer__box--item"><a class="footer__box--link">Контакты</a></li>
-    </ul>
-    <ul class="footer__box">
-      <li class="footer__box--item">
-        <h3 class="footer__box--head">Частые вопросы</h3>
-      </li>
-      <li class="footer__box--item"><a class="footer__box--link">Оплата и доставка<a></li>
-      <li class="footer__box--item"><a class="footer__box--link">Гарантия<a></li>
-      <li class="footer__box--item"><a class="footer__box--link">Качество<a></li>
-      <li class="footer__box--item"><a class="footer__box--link">Условия возврата<a></li>
-    </ul>
-    <ul class="footer__box">
-      <li class="footer__box--item">
-            <h3 class="footer__box--head">Присоединяйтесь</h3>
-      </li>
-      <a href="#">
-          <svg width="28" height="28" class="footer__box--svg">
-              <use href="img/sprite/sprite.svg#icon-instagram"></use>
-            </svg>
-      </a>
-      <a href="#">
-          <svg width="28" height="28" class="footer__box--svg">
-              <use href="img/sprite/sprite.svg#icon-linkedin2"></use>
-            </svg>
-      </a><a href="#">
-          <svg width="28" height="28" class="footer__box--svg">
-              <use href="img/sprite/sprite.svg#icon-facebook2"></use>
-            </svg>
-      </a><a href="#">
-          <svg width="28" height="28" class="footer__box--svg">
-              <use href="img/sprite/sprite.svg#icon-twitter2"></use>
-          </svg>
-      </a>
-    </ul>
-    <ul class="footer__box">
-      <li class="footer__box--item">
-        <h3 class="footer__box--head">Рассылка новостей</h3>
-      </li>
-      <li class="footer__box--item">
-        <p class="footer__box--discr">Будьте в курсе о наших акциях, скидках и других новостях</p>
-      </li>
-      <li class="footer__box--item foo__btn">
-        <button class="footer__box--btn plane">
+    <div class="footer_block">
+      <h3 class="footer_block--logo">Sk Wear Online</h3>
+      <ul class="footer_list">
+        <!-- <li class="footer__box--item"><a class="footer__box--logo">Sk Wear Online</a></li> -->
+        <li class="footer_list--item">
+          <p class="footer_list--discr">Производство купальников и одежды для фитнеса</p>
+        </li>
+        <li class="footer_list--item">
+          <p class="footer_list--discr">ИП Хлебникова Ирина Александровна</p>
+        </li>
+        <li class="footer_list--item">
+          <p class="footer_list--discr">г.Сочи</p>
+        </li>
+        <li class="footer_list--item">
+          <p class="footer_list--discr">E. sushka_kuper@mail.ru</p>
+        </li>
+        <li class="footer_list--item">
+          <p class="footer_list--discr">T: 8988-167-15-09</p>
+        </li>
+      </ul>
+    </div>
+    <div class="footer_block">
+      <h3 class="footer_block--head">О НАС</h3>
+      <ul class="footer_list">
+        <li class="footer_list--item"><a class="footer_list--link">Каталог</a></li>
+        <li class="footer_list--item"><a class="footer_list--link">Акции</a></li>
+        <li class="footer_list--item"><a class="footer_list--link">Отзывы</a></li>
+        <li class="footer_list--item"><a class="footer_list--link">О проекте</a></li>
+        <li class="footer_list--item"><a class="footer_list--link">Контакты</a></li>
+      </ul>
+    </div>
+    <div class="footer_block">
+      <h3 class="footer_block--head">Частые вопросы</h3>
+      <ul class="footer_list">
+        <li class="footer_list--item"><a class="footer_list--link">Оплата и доставка<a></li>
+        <li class="footer_list--item"><a class="footer_list--link">Гарантия<a></li>
+        <li class="footer_list--item"><a class="footer_list--link">Качество<a></li>
+        <li class="footer_list--item"><a class="footer_list--link">Условия возврата<a></li>
+      </ul>
+    </div>
+    <div class="footer_block">
+      <h3 class="footer_block--head">Присоединяйтесь</h3>
+      <div class="footer_block--svg-box">
+          <a href="#">
+              <svg width="28" height="28" class="footer_block--svg">
+                  <use href="img/sprite/sprite.svg#icon-instagram"></use>
+                </svg>
+          </a>
+          <a href="#">
+              <svg width="28" height="28" class="footer_block--svg">
+                  <use href="img/sprite/sprite.svg#icon-linkedin2"></use>
+                </svg>
+          </a>
+          <a href="#">
+              <svg width="28" height="28" class="footer_block--svg">
+                  <use href="img/sprite/sprite.svg#icon-facebook2"></use>
+                </svg>
+          </a>
+          <a href="#">
+              <svg width="28" height="28" class="footer_block--svg">
+                  <use href="img/sprite/sprite.svg#icon-twitter2"></use>
+              </svg>
+          </a>
+      </div>
+    </div>
+    <div class="footer_block">
+      <h3 class="footer_block--head">Рассылка новостей</h3>
+      <p class="footer_block--news">Будьте в курсе о наших акциях, скидках и других новостях</p>
+      <div class="foo_btn">
+        <button class="footer_block--btn plane">
           <svg width="41" height="44">
             <use href="img/sprite/sprite.svg#icon-compass"></use>
           </svg>
         </button>
-        <button class="footer__box--btn join">Подписаться</button>
-      </li>
-    </ul>
+        <button class="footer_block--btn join">Подписаться</button>
+      </div>
+    </div>
   </div>
   <div class="footer__bottom">
-    <p class="footer__bottom--copyright">&#169; 2018 Все права защищены skwear.com</p>
+  <p class="footer__bottom--copyright">&#169; 2018 Все права защищены skwear.com</p>
   </div>
 </footer>
