--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="format-detection" content="telephone=no">
 
-  <title>Module-11</title>
+  <title>Shop PRoject</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/png" href="img/fav-icon.png">
 
